# E-HGP

./: .gitattributes  .gitignore  ADDENDUM_DTM_HIERARCHIE_SPARSE_GPU_2026-07-13.md  AGENTS.md  E-HGP_Colab_Benchmark.ipynb  LICENSE  PERG_HGP_Blackwell_30M.ipynb  PERG_HGP_Colab_GPU_Benchmark.ipynb  RAPPORT_HGP_ORDRE_ECHELLE_DESCENTE_GPU_2026-07-14.md  RAPPORT_HIERARCHIE_HGP_MORSE_SOFTLENS_GPU_2026-07-13 (1).md  README.md  agents.md  algorithme_reg_knn_hgp_certifie_v2.md  benchmark.py  benchmark_hard.py  benchmark_hypermassive.py  benchmark_k_impact.py  benchmark_large.py  benchmark_perg_hgp.py  generate_notebook.py  perg_hgp_benchmark_tool.py  perg_hgp_phase5_diagnostic_report.md  thesis_repo_summary.md
E-HGP/: DESIGN.md  README.md  benchmark_results.md  pyproject.toml  setup.py
E-HGP/e_hgp/: __init__.py  _core.pyx  clustering.py  estimator.py  gabriel.py  lazy_boruvka.py  miniball.py  regularization.py
E-HGP/tests/: test_e_hgp.py
HGP-old/: .geminiignore  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
HGP-old/CGALDelaunay/: README.md
HGP-old/CGALDelaunay/orderk_delaunay_cpp/: CMakeLists.txt
HGP-old/PercolationRate/: PercolationRate.ipynb
HGP-old/scripts/: setup_cgal.py
HGP-old/src/hgp_clusterer/: __init__.py  _cython.pyx  _geometry_binding.cpp  _miniball_batch.hpp  clustering.py  core.py  delaunay.py  estimator.py  geometry.py  hypergraph.py  kernels_geogram.hpp
HGP-old/src/hgp_delaunay/: __init__.py  delaunay.py
HGP-old/src/hgp_reducer/: __init__.py  reducer.py
HGP-old/tests/HGP-Reducer/: HGP-Reducer_Benchmark.ipynb
HGP-old/tests/MarieBenchmark/: HGP_clusterer_MarieBenchmark.ipynb
HGP-old/tests/Maya/: HGP-Clusterer_Maya.ipynb  simu_MB_10Myr.parquet
HGP-old/tests/OliveOil/: HGP-Clusterer_OliveOil.ipynb
HGP-old/tests/SemanticKITTI/: HGP-Clusterer_SemanticKITTI_4DPanoptic_final.ipynb  HGP-Clusterer_SemanticKITTI_4DPanoptic_final.py  HGP-Clusterer_SemanticKITTI_4DPanoptic_v2.ipynb  HGP-Clusterer_SemanticKITTI_4DPanoptic_v3.ipynb  README.md  tracker.py  tracker2.py  uot_sinkhorn.py
morsehgp3d/: CMakeLists.txt  CMakePresets.json  README.md
morsehgp3d/cmake/: MorseHGP3DConfig.cmake.in  MorseHGP3DCuda.cmake  MorseHGP3DPhase3Dependencies.cmake
morsehgp3d/src/cuda/: environment_probe.cu  phase14_facet_top_k_proposal.cu  phase14_facet_top_k_proposal_internal.hpp  phase14_morton_lbvh_build.cu  phase14_morton_lbvh_build_internal.hpp  phase2b_distance_filter.cu  phase2b_distance_filter_internal.hpp  phase2b_interval.cuh  phase2b_orientation_filter.cu  phase2b_orientation_filter_internal.hpp  phase2b_power_bisector_filter.cu  phase2b_power_bisector_filter_internal.hpp  phase2b_predicate_context.cuh  phase2b_predicate_context_internal.hpp  phase3_runtime.cu  phase4_spatial_bounds.cu  phase4_spatial_bounds_internal.hpp  phase4_spatial_reference.cu  phase4_spatial_reference_internal.hpp  phase5_k1_boruvka.cu  phase5_k1_boruvka_internal.hpp  phase7_h_polytope_proposal.cu  phase7_h_polytope_proposal_internal.hpp  phase9_pair_support_phi.cu  phase9_pair_support_phi_internal.hpp
morsehgp3d/src/gpu/: direct_sparse_facet_top_k_proposal.cpp  exact_center_binary64_projection.hpp  h_polytope_proposal.cpp  k1_boruvka.cpp  k1_boruvka_hierarchy.cpp  k1_boruvka_hybrid.cpp  k1_boruvka_seeded_exact.cpp  morton_lbvh_build.cpp  pair_support_phi.cpp  predicate_filter.cpp  rational_binary64_enclosure.hpp  spatial_bounds.cpp  spatial_lbvh.cpp  spatial_reference.cpp
morsehgp3d/src/python/: phase3_module.cpp
morsehgp3d/src/tools/: direct_pair_support_smoke.cpp  gpu_direct_sparse_facet_top_k_proposal_qualification.cpp  gpu_h_polytope_proposal_qualification.cpp  gpu_k1_boruvka_exact_search_work_profile.cpp  gpu_k1_boruvka_full_replay.cpp  gpu_k1_boruvka_morton_work_profile.cpp  gpu_k1_boruvka_replay.cpp  gpu_morton_lbvh_build_component_smoke.cpp  gpu_pair_support_phi_qualification.cpp  gpu_predicate_context_harness.cpp  gpu_predicate_replay.cpp  gpu_spatial_bounds_replay.cpp  gpu_spatial_lbvh_replay.cpp  gpu_spatial_reference_replay.cpp  predicate_replay.cpp
morsehgp3d/tests/campaigns/: phase2a_predicates_v1.json  phase2a_predicates_v1.result.json
morsehgp3d/tests/configuration/: check_phase10_direct_closed_saddle_incidence.py  check_phase10_direct_frozen_root_quotient.py  check_phase10_direct_k1_forest.py  check_phase10_direct_saddle_arm_seed.py  check_phase10_direct_sparse_facet_descent_closure.py  check_phase10_direct_sparse_facet_descent_step.py  check_phase10_direct_sparse_first_incidence.py  check_phase10_direct_sparse_gateway_candidate.py  check_phase10_direct_sparse_gateway_candidate_localization.py  check_phase10_direct_sparse_gateway_clock.py  check_phase10_direct_sparse_positive_facet_locator.py  check_phase10_direct_sparse_positive_facet_prefix_sweep.py  check_phase2b_predicates.py  check_phase3_build.py  check_phase3_runtime.py  check_phase4_spatial_bounds.py  check_phase4_spatial_lbvh.py  check_phase4_spatial_reference.py  check_phase5_k1_boruvka_exact_search_work_profile.py  check_phase9_pair_support.py  (+4 more)
morsehgp3d/tools/: level_run_checkpoint.py  phase2b_predicate_campaign.py  predicate_campaign.py  replay_predicate.py
perg_hgp/: POWER_COVER_3D.md  RAPPORT_PERG_HGP_GRANDE_DIMENSION_2026-07-12.md  README.md  Rapport_audit_PERG_HGP_2026-07-11.md  Rapport_audit_PERG_HGP_pour_Gemini_2026-07-09.md  Rapport_audit_PowerCover3D_30M_K10_SemanticKITTI_2026-07-11.md  Rapport_revue_complete_PERG_HGP_2026-07-10.md  __init__.py  pyproject.toml  setup.py
perg_hgp/benchmarks/: README.md  __main__.py  cli.py  coverage_cpu_microbenchmark.py  datasets.py  io_utils.py  metrics.py  resources.py  worker.py
perg_hgp/perg_hgp/: __init__.py  cofaces.py  config.py  dual_graph.py  estimator.py  gabriel.py  grid.py  hierarchy.py  local_gibbs.py  rank_field.py  witnesses.py
perg_hgp/tests/: test_cubical_msf.py  test_cuda_runtime_contract.py  test_perg_hgp.py  test_power_cover_coverage_optimized.py  test_power_cover_flat_labels.py  test_power_cover_import_contract.py  test_power_cover_industrial.py  test_power_cover_spatial_core.py  test_power_oracle.py
(+915 files in other folders)
