[build-system]
requires = ["setuptools>=61.0.0", "wheel", "Cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "e_hgp"
version = "0.1.0"
description = "Entropy-Regularized GPU-friendly Hypergraph Percolation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]
